--- a/wwr/styles/site-plan-rafting.css
+++ b/wwr/styles/site-plan-rafting.css
@@ -16,7 +16,7 @@ Fonts are separated by a & */
   --paragraph-font: Raleway, Helvetica, sans-serif;
 
   /* these colors below should be chosen from among your palette colors above */
-  --headline-color-on-white: #3F91C7;  /* headlines on a white background */ 
+  --headline-color-on-white: #56BD90;  /* headlines on a white background */ 
   --headline-color-on-color: #F3FAF4; /* headlines on a colored background */ 
   --paragraph-color-on-white: #56BD90; /* paragraph text on a white background */ 
   --paragraph-color-on-color: #F3FAF4; /* paragraph text on a colored background */ 
