--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Architects+Daughter&family=Chelsea+Market&family=Permanent+Marker&family=Raleway&display=swap');
 #content{
     max-width: 1600px;
     margin: 0 auto;
@@ -9,6 +10,8 @@ nav a{
     color: #F3FAF4; 
     text-decoration: none;
     text-align: center;
+    font-family:"Raleway",sans-serif,Arial ;
+    padding: 35px;
 }
 #background {
     height: 725px;
@@ -16,6 +19,8 @@ nav a{
 }
 body{
     background-color: #F3FAF4;
+    margin: 0;
+    padding: 0;
 }
 header {
     background-color: #56BD90;
@@ -23,10 +28,28 @@ header {
 nav a:hover {
     background-color: rgb(164, 174, 174);
 }
-.book, .join, .msg {
+.book, .join {
     background-color: #3F91C7;
     color: #F3FAF4;
     text-decoration: none;
+    font-family: "Raleway",sans-serif,Arial;
+    font-size: 18px;
+    padding: 15px 30px;
+    margin-top: 50px;
+    border-radius: 5px;
+}
+.msg {
+    background-color: #3F91C7;
+    color: #F3FAF4;
+    text-decoration: none;
+    font-family: "Architects Daughter", "Permanent Marker","Chelsea Market";
+    line-height: 1.5em;
+    padding: 35px; 
+}
+.msg p{
+    font-family: "Raleway",sans-serif,Arial;
+    font-size: .8em;
+    padding-bottom: 15px;
 }
 .book:hover, .join:hover{
     background-color: #A4AEAE;
@@ -34,6 +57,9 @@ nav a:hover {
 footer{
     background-color: #A4AEAE;
     font-size: 1.2em;
+    font-family: "Raleway",sans-serif,Arial;
+    padding: 25px 50px;
+    margin-top: 200px;
 }
 footer a {
     color: black;
@@ -48,4 +74,38 @@ footer a:hover {
 }
 .icon {
     width: 80px;
+    padding-top: 10px;
+}
+.home-title {
+    font-family: "Architects Daughter", "Permanent Marker","Chelsea Market";
+    font-size: 2em;
+    margin-top: 10px;
+}
+section h4{
+    font-family: "Raleway",sans-serif,Arial;
+}
+.home-grid {
+    font-family: "Architects Daughter", "Permanent Marker","Chelsea Market";
+}
+h2 {
+    margin: 0;
+}
+
+#logo_link {
+    padding-top: 5px;
+}
+footer .social img {
+    padding-top: 15px;
+}
+.rivers-card, .camping-card, .rapids-card{
+    margin: 200px 0;
+}
+.card-img {
+    border: 10px solid #3F91C7;
+}
+main section img {
+    box-sizing: border-box;
+}
+.mountains {
+    margin: 100px 0;
 }
