--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -6,8 +6,23 @@
 #hero-msg h1, #hero-msg h4, .button-box,main section{
     text-align: center;
 }
+#hero {
+    display: grid;
+    grid-template-columns: 1fr 3fr 1fr;
+    margin-top: -100px; 
+}
+#hero-msg {
+    grid-column: 2/3;
+    grid-row: 1/2;
+    margin-top: 100px;
+}
+#hero-box {
+    grid-column: 1/4;
+    grid-row: 1/3;
+    z-index: -1;
+}
 nav a{
-    color: #F3FAF4; 
+    color: black; 
     text-decoration: none;
     text-align: center;
     font-family:"Raleway",sans-serif,Arial ;
@@ -16,6 +31,8 @@ nav a{
 #background {
     height: 725px;
     background-color: #56BD90;
+    grid-column: 1/11;
+    grid-row: 4/9;
 }
 body{
     background-color: #F3FAF4;
@@ -23,10 +40,17 @@ body{
     padding: 0;
 }
 header {
-    background-color: #56BD90;
+    background-color: rgb(86, 189, 144, 0.6);
+    display:grid;
+    grid-template-columns: 150px auto;
+    
+}
+nav{
+    display: flex;
+    justify-content: space-around;
 }
 nav a:hover {
-    background-color: rgb(164, 174, 174);
+    background-color: #a4aeae;
 }
 .book, .join {
     background-color: #3F91C7;
@@ -45,6 +69,9 @@ nav a:hover {
     font-family: "Architects Daughter", "Permanent Marker","Chelsea Market";
     line-height: 1.5em;
     padding: 35px; 
+    grid-column: 6/10;
+    grid-row: 6/7;
+    box-shadow: 5px 5px 10px #6f7364;
 }
 .msg p{
     font-family: "Raleway",sans-serif,Arial;
@@ -60,6 +87,9 @@ footer{
     font-family: "Raleway",sans-serif,Arial;
     padding: 25px 50px;
     margin-top: 200px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
 }
 footer a {
     color: black;
@@ -70,7 +100,7 @@ footer a:hover {
     text-decoration: underline;
 }
 .logo{
-    width: 80px;
+    width: 80%;
 }
 .icon {
     width: 80px;
@@ -80,12 +110,18 @@ footer a:hover {
     font-family: "Architects Daughter", "Permanent Marker","Chelsea Market";
     font-size: 2em;
     margin-top: 10px;
+    color: #F3FAF4;
+    text-shadow: 2px 2px 5px black, 0 0 25px #56BD90, 0 0 5px #3F91C7;
 }
 section h4{
     font-family: "Raleway",sans-serif,Arial;
+    color: #F3FAF4 ;
+    text-shadow: 2px 2px 5px black, 0 0 25px #56BD90, 0 0 5px #3F91C7;
 }
 .home-grid {
     font-family: "Architects Daughter", "Permanent Marker","Chelsea Market";
+    display: grid;
+    grid-template-columns: repeat(10,1fr);
 }
 h2 {
     margin: 0;
@@ -93,19 +129,92 @@ h2 {
 
 #logo_link {
     padding-top: 5px;
+    justify-self: center;
+    align-self: center;
 }
 footer .social img {
     padding-top: 15px;
 }
-.rivers-card, .camping-card, .rapids-card{
+.rivers-card{
     margin: 200px 0;
+    grid-column: 2/4;
+    grid-row: 2/3;
+}
+.camping-card{
+    margin: 200px 0;
+    grid-column: 5/7;
+    grid-row: 2/3;
+}
+.rapids-card{
+    margin: 200px 0;
+    grid-column: 8/10;
+    grid-row: 2/3;
 }
 .card-img {
     border: 10px solid #3F91C7;
+    width: 100%;
+    transition: transform .5s;
+    box-shadow: 5px 5px 10px #6f7364;
+}
+.card-img:hover {
+    opacity: .6;
+    width: 300px;
+    height: 300px;
+    transform: rotate(360deg)
 }
 main section img {
     box-sizing: border-box;
 }
 .mountains {
     margin: 100px 0;
+    width: 100%;
+    grid-column: 2/7;
+    grid-row: 5/8;
+    box-shadow: 5px 5px 10px #6f7364;
+}
+#hero-img{
+    width: 100%;
+}
+
+
+@media screen and (max-width: 900px) {
+    #hero, .home-grid {
+        display: block;
+        height: auto;
+    }
+    nav, footer {
+        flex-direction: column;
+    }
+    nav a {
+        display: block;
+        padding: 15px;
+    }
+    #hero {
+        margin-top: 0;
+    }
+    #hero-msg {
+        margin-top: 0;
+    }
+    #hero-msg h4 {
+        display: none;
+    }
+    .home-title {
+        font-size: 25px;
+        color: #6f7364;
+    }
+    .rivers-card, .camping-card, .rapids-card { 
+        margin: 50px auto;
+        width: 60%;
+    }
+    #background {
+        display: none;
+    }
+    .mountains, .msg {
+        width: 80%;
+        display: block;
+        margin: 0 auto;
+    }
+    footer {
+        margin-top: 25px;
+    }
 }
