--- a/artesanias/styles/style.css
+++ b/artesanias/styles/style.css
@@ -80,12 +80,7 @@ nav a{
     font-size: 1.5em;
     padding: 0 100px;
 }
-.brands {
-    display: grid;
-    grid-template-columns: repeat(10,.5fr);
-    grid-template-rows: repeat(11,.2fr);
-    margin-top: 20px;
-}
+
 .flores{
     display: block;
     margin-left: auto;
@@ -98,43 +93,6 @@ nav a{
     margin-right: auto;
     width:20%;
     padding-top: 40px;
-}
-.background2 {
-    grid-column: 1/11;
-    grid-row: 1/12;  
-    background-color: rgb(8, 29, 97);
-    z-index: -1;
-    border-radius: 50px;
-    border: 5px dotted #E887D4;
-}
-.ela{
-    grid-column: 1/4;
-    grid-row: 2/6;
-    width: 110%;
-    padding-left:10% ;
-}
-.es{
-    grid-column: 4/7;
-    grid-row: 6/9;
-    padding-left:15% ;
-    padding-top:10% ;
-    width: 100%;
-}
-
-.et{
-    grid-column: 7/10;
-    grid-row: 2/6;
-    width: 120%;
-    
-}
-
-.brands h2{
-    grid-column: 5/8;
-    grid-row: 2/3;
-    color:white; 
-
-    font-size: 2em;
-    font-family:"Capriola",sans-serif,Arial ;
 }
 .msg2{
     display: grid;
@@ -154,6 +112,9 @@ nav a{
     text-align: center;
     font-family: "Inter", "Permanent Marker","Chelsea Market";
     font-weight: bolder;
+}
+.background2{
+    background-color: #f7cc25;
 }
 .colibri{
     grid-column: 3/4;
@@ -178,7 +139,7 @@ footer {
 }
 .social img{
 
-    width: 20%;
+    width: 30%;
     padding-left: 50px;
     z-index: -1;
 }
@@ -202,4 +163,91 @@ footer .background{
 }
 footer nav a:hover{
     text-decoration: underline;
+}
+* {box-sizing:border-box}
+
+/* Slideshow container */
+.slideshow-container {
+  max-width: 1000px;
+  position: relative;
+  margin: auto;
+  background-color: rgb(8, 29, 97);
+  border-radius: 50px;
+  border: 5px dotted #E887D4;
+}
+.brands img{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+/* Hide the images by default */
+.mySlides {
+  display: none;
+}
+
+/* Next & previous buttons */
+.prev, .next {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  margin-top: -22px;
+  padding: 16px;
+  color: white;
+  font-weight: bold;
+  font-size: 18px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+}
+
+/* Position the "next button" to the right */
+.next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+
+/* On hover, add a black background color with a little bit see-through */
+.prev:hover, .next:hover {
+  background-color: rgba(167, 34, 34)
+}
+
+/* Caption text */
+.text {
+  color: #f2f2f2;
+  font-size: 15px;
+  padding: 8px 12px;
+  position: absolute;
+  bottom: 8px;
+  width: 100%;
+  text-align: center;
+}
+
+
+
+/* The dots/bullets/indicators */
+.dot {
+  cursor: pointer;
+  height: 15px;
+  width: 15px;
+  margin: 0 2px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
+}
+
+.active, .dot:hover {
+  background-color: #717171;
+}
+
+/* Fading animation */
+.fade {
+  animation-name: fade;
+  animation-duration: 1.5s;
+}
+
+@keyframes fade {
+  from {opacity: .4}
+  to {opacity: 1}
 }
