--- a/artesanias/styles/style.css
+++ b/artesanias/styles/style.css
@@ -430,3 +430,155 @@ form {
     animation: shake 0.5s;
     animation-iteration-count: infinite;
   }
+  .git{
+    display: grid;
+    grid-template-columns: 10% 40% 40% 10%;
+  }
+  .back{
+    grid-column: 2/4;
+    grid-row: 1/2;
+    width: 100%;
+  }
+  .cartesania{
+    grid-column: 2/3;
+    grid-row: 1/2;
+    z-index: 1;
+    list-style: none;
+    padding-top: 55px;
+    padding-left: 90px;
+    font-family: "Inter", "Permanent Marker","Chelsea Market";
+    color: white;
+    font-size: 1.5em;
+  }
+  .cartesania li{
+    padding-top: 15px;
+  }
+  .logogit {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    
+  }
+  div h1{
+    text-align: center;
+    font-family:"Capriola",sans-serif,Arial ;
+  }
+
+  /* The Modal (background) */
+.modal {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  padding-top: 60px;
+}
+
+/* Modal Content/Box */
+.modal-content {
+  background-color: #f7cc25;
+  margin: auto; /* 15% from the top and centered */
+  width: 50%; /* Could be more or less, depending on screen size */
+}
+
+/* The Close Button */
+.close {
+  /* Position it in the top right corner outside of the modal */
+  position: absolute;
+  right: 25px;
+  top: 0;
+  color: #000;
+  font-size: 35px;
+  font-weight: bold;
+}
+
+/* Close button on hover */
+.close:hover,
+.close:focus {
+  color: red;
+  cursor: pointer;
+}
+
+/* Add Zoom Animation */
+.animate {
+  -webkit-animation: animatezoom 0.6s;
+  animation: animatezoom 0.6s
+}
+
+@-webkit-keyframes animatezoom {
+  from {-webkit-transform: scale(0)}
+  to {-webkit-transform: scale(1)}
+}
+
+@keyframes animatezoom {
+  from {transform: scale(0)}
+  to {transform: scale(1)}
+}
+.email{
+  grid-column: 3/4 ;
+  grid-row: 1/2;
+  height: 50px;
+  width: 100px;
+  margin-left: 30%;
+  margin-top: 30%;
+  font-family:"Capriola",sans-serif,Arial ;
+}
+
+.box{
+  list-style: none;
+  font-family: "Inter", "Permanent Marker","Chelsea Market";
+  color: white;
+  font-size: 1.3em;
+}
+.git ul #msg{
+  height: 390px;
+  width: 536px;
+}
+
+/* Style the buttons that are used to open and close the accordion panel */
+.accordion {
+  background-color: #f7cc25;
+  color: black;
+  cursor: pointer;
+  padding: 20px;
+  width: 100%;
+  text-align: center;
+  margin-top: 30px;
+  border: none;
+  outline: none;
+  transition: 0.4s;
+  font-family: "Inter", "Permanent Marker","Chelsea Market";
+  font-size: 1.3em;
+}
+
+/* Add a background color to the button if it is clicked on (add the .active class with JS), and when you move the mouse over it (hover) */
+.active, .accordion:hover {
+  background-color: #56a35b;
+  color: white;
+}
+
+/* Style the accordion panel. Note: hidden by default */
+.panel {
+  padding: 0 18px;
+  background-color: white;
+  max-height: 0;
+  overflow: hidden;
+  transition: max-height 0.2s ease-out;
+  font-family: "Inter", "Permanent Marker","Chelsea Market";
+}
+.accordion:after {
+  content: '\002B'; /* Unicode character for "plus" sign (+) */
+  font-size: 13px;
+  color:#e42380 ;
+  float: right;
+  margin-left: 5px;
+}
+
+.active:after {
+  content: "\2212"; /* Unicode character for "minus" sign (-) */
+}
